  * Enabled compiler warning messages for SRMLog functions to alert when the value types to print do not match the specified string format.

  # Documentation

  * Enhanced the Doxygen layout to showcase member declarations at the top of each page, accompanied by brief descriptions for improved readability.
  
-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Wed, 24 Jan 2024 12:43:33 -0300


SRM (0.4.0-1)

  # New Features

  * Introduced srmPlaneGetFormats() to retrieve the supported formats/modifiers of an SRMPlane.
  * Implemented srmDeviceGetGLExtensions() for checking the support of common OpenGL extensions.
  * Added srmCoreGetVersion() to retrieve the current SRM version.

  # Building

  * Incorporated soversion in meson.build, special thanks to @sudipm-mukherjee.
  
  # Internal Changes

  * Set rendering OpenGL contexts to high priority.
  * Removed GL_BGRA format dependency in DUMB and CPU render modes.
  * Reduced the frequency of calls to eglMakeCurrent() in all render modes.
  
-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Fri, 15 Dec 2023 20:24:22 -0300


SRM (0.3.2-2)

  # Building

  * Implemented pkgconfig in meson.build to enhance dependency management, with special thanks to @jengelh.
  
  # Documentation Changes

  * Refactored meson.build for clarity in the tutorial.
  * Added the missing math.h header to the tutorial.
  * Added ldconfig command in the build instructions of the downloads page.
  
-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Sat, 18 Nov 2023 22:30:15 -0300


SRM (0.3.2-1)

  # Bug Fixes

  * Fixed build failure on Debian GNU/Linux 11.3 ARM64 caused by incorrect inclusion 
    of drm_fourcc.h in SRMTypes.h, thanks to Thomas Curley - @tomus85.
  
  # Internal Changes

  * Enforced the use of the legacy API in srmRenderModeCommonInitCrtc().

  # Documentation Changes

  * Added the missing libseat-dev dependency to the Debian building instructions.
  * Expanded the tested hardware section to include AMD GPU.
  