@@ -1,6 +1,11 @@
 #ifndef SRMTYPES_H
 #define SRMTYPES_H
 
+#define SRM_VERSION_MAJOR @SRM_VERSION_MAJOR@
+#define SRM_VERSION_MINOR @SRM_VERSION_MINOR@
+#define SRM_VERSION_PATCH @SRM_VERSION_PATCH@
+#define SRM_VERSION_BUILD @SRM_VERSION_BUILD@
+
 #define SRM_PAR_CPY 0
 #define SRM_MAX_COPY_THREADS 32
 
