@@ -15,6 +15,10 @@ SRM (0.5.0-1)
   # Documentation
 
   * Enhanced the Doxygen layout to showcase member declarations at the top of each page, accompanied by brief descriptions for improved readability.
+
+  # Building
+
+  * Transformed the SRMTypes.h header into a configuration file, including macros to access the library version statically during compilation.
   
 -- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Wed, 24 Jan 2024 12:43:33 -0300
 
